# sead_authority_service

./: .gitignore  CHANGELOG.md  CONFIG-README.md  Makefile  README.md  app.py  main.py  pyproject.toml  validate_config.py
.chats/: 20251005-chat.json  20251007-chat.json  20251023-chat.json  ChatGPT_use_of_role_in_messages.md  OPENREFINE_DEBUGGING.md  OPENREFINE_STATUS.md  REFACTORING_COMPLETE.md  SUGGEST_API_IMPLEMENTATION.md  SUGGEST_API_QUICKSTART.md
.github/workflows/: docker-build.yml
config/: config.yml  entities.yml
docker/: .dockerignore  .gitignore  Dockerfile  Dockerfile.github  Dockerfile.pgai  Makefile  Makefile.dev  QUICKSTART.md  README.md  build.sh  compose.yml  config.yml  docker-compose.prod.yml  entrypoint.sh  main.py
docker/development/: docker-compose.yml
docker/production/: docker-compose.yml
docker/staging/: docker-compose.yml
docs/: CHANGELOG.md  CI_CD_PERFORMANCE_ANALYSIS.md  DEPLOYMENT.md  EMBEDDING_DIMENSION.md  LIST_OPERATIONS_IN_CONFIG.md  OPENREFINE_PREVIEW_TOOLTIP.md  OPTIMIZATION_QUICKSTART.md  PHASE_1_SQL_COMPLETION.md  SEMANTIC_RELEASE.md  SUB_CONFIG_FEATURE.md  TAXA_RECONCILIATION_STRATEGY.md
docs/MCP Server/: SEAD Reconciliation via MCP — Architecture Doc (Outline).md  config-template.yml  diagrams.md  implementation-checklist.md
docs/integration_tests/: ERROR_FLOW_DIAGRAM.md  INDEX.md  QUICKSTART_DEBUG.md  README_INTEGRATION_TESTING.md
docs/schema/: README.md  SCHEMA_GENERATION_SPLIT.md  USAGE.md
examples/: DECORATOR_USAGE_GUIDE.md  configuration_usage.py
schema/: .gitignore  INSTALLATION_ORDER.md  __deploy__.sql  create_schema.sh
schema/sql/: authority.sql  update_embeddings.sql
schema/templates/: entity.sql.jinja2  semantic-entity.sql.jinja2
scripts/: check_imports.py  fix_imports.py  test_modification_type_reconciliation.py
sql/: 00_install_all.sql  01_authority.sql  01_utility.sql  02_location.sql  03_site.sql  04_feature_type.sql  05_bibliographic_reference.sql  06_method.sql  07_data_type.sql  08_record_type.sql  09_taxa_tree_author.sql  10_taxa_tree_order.sql  11_taxa_tree_family.sql  12_taxa_tree_genus.sql  13_taxa_tree_master.sql  14_taxonomic_order_system.sql  15_taxonomy_note.sql  16_taxonomic_order.sql  17_taxa_synonym.sql  49_refresh_materialized_views.sql  99_scratchpad.sql  authority.sql  install.sh  install.sql  scratchpad.sql  setup.sql  site.sql  temp_install_all.sql
src/: __init__.py  metadata.py  preview.py  reconcile.py  render.py  site.py  suggest.py  taxon.py  utility.py
src/api/: model.py  router.py
src/configuration/: __init__.py  config.py  inject.py  interface.py  provider.py  resolve.py  setup.py  utility.py
src/geonames/: __init__.py  proxy.py
src/llm/providers/: __init__.py  antropic.py  ollama.py  openai.py  provider.py
src/llm/translation/: __init__.py  cache.py  translation.py
src/mcp/: QUICKSTART.md  README.md  __init__.py  config.py  models.py  resources.py  server.py  tools.py
src/resources/: administrative_region.yml  bibliographic_reference.yml  country.yml  data_type.yml  dimension.yml  feature_type.yml  geonames.yml  location.yml  method.yml  method_rag.yml  sampling_context.yml  site.yml
src/scripts/: generate_entity_schema.py  populate_embeddings.py
src/strategies/: __init__.py  administrative_region.py  bibligraphic_reference.py  bibliographic_reference.py  country.py  data_type.py  dimension.py  feature_type.py  geonames.py  interface.py  llm_strategy.py  location.py  method.py  modification_type.py  query.py  sampling_context.py  site.py  site_llm.py  strategy.py  taxon.py
src/strategies/geonames/: geonames.py  proxy.py
src/strategies/llm/: format_data.py  input_format.py  llm_models.py  llm_strategy.py  modification_type.py  strict_format.json
src/strategies/rag_hybrid/: rag_hybrid_strategy.py
tests/: config.yml  config_fixtures.py  conftest.py  decorators.py  test.rest  test_config.py  test_geonames_proxy.py  test_llm_input_format.py  test_location.py  test_mcp.py  test_metadata.py  test_modification_type.py  test_ollama.py  test_query_proxy.py  test_render.py  test_router.py  test_site.py  test_strategy.py  test_suggest.py  test_utility.py
tests/arbodat/: __init__.py  test_config_model.py  test_config_specifications.py  test_dispatch.py  test_fixed.py  test_fixed_loader.py  test_mapping.py  test_normalizer.py  test_unnest.py  test_utility.py  test_utility_functions.py  test_workflow.py
tests/config/: prompts.yml
tests/geonames/: test_proxy.py  test_strategy.py
tests/integration/: CODE_FIX.md  ERROR_FLOW_DIAGRAM.md  SETUP_COMPLETE.md  test_reconcile_integration.py
tests/strategies/: test_feature_type.py  test_modification_type.py  test_registry.py  test_site.py  test_strategy.py
tests/test_data/: sites.csv
vba/: UnpivotSelectedColumns_ToXY_Dialog.vb
